[package]
name = "icm-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
clap = { version = "4.5.21", features = ["derive"] }
rayon = "1.10.0"

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
#lto = "fat"
